--- a/order-summary-component/style.css
+++ b/order-summary-component/style.css
@@ -42,6 +42,34 @@
 
 .container-music {
     background-color: hsl(225, 100%, 98%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+    margin-left: 55px;
+    margin-right: 55px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
+
+.music-logo {
+    /* float: left; */
+}
+
+.music-details-information h3 {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 6px;
+}
+
+.music-details-information h4 {
+    font-size: 16px;
+    color:#717FA6; 
 }
 
 .attribution {
